# elevatus-assignment-py

./: .env.sample  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/internal/: database.py  models.py  settings.py
app/routers/: routes.py
tests/: test_main.py
