[tool.poetry]
name = "elevatus-assignment-py"
version = "0.1.0"
description = "Technical Assignment by Elevatus for a Python Developer Role"
authors = ["Moha-AlHanbali <Moha.AlHanbali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
pymongo = "^4.6.1"
uvicorn = "^0.25.0"
pytest = "^7.4.4"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
